* Fri Dec 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- Updated global catalysts

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Update version to reflect SIMP6 dependencies

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.1.2-0
- Minor cleanup

* Mon Sep 26 2016 Jeanne Greulich, Liz Nemsick - 5.1.0-0
- Allow user to specify syslog facility and priority for audit record
  messages.
- Allow user to enable/disable audit record syslog messaging independent
  of the presence of forwarding logging servers.
- Added a file resource to detect and fix incorrect permissions on the
  /var/log/audit/audit.log file.

* Mon Aug 29 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.4-0
- Added booleans to toggle sections of audit rules.

* Tue Jul 26 2016 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 5.0.3-0
- Fix for strict_variables failure

* Wed Jul 06 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.2-0
- Added a default audit rule for 'renameat', per CCE-26651-0.
- Added an auditd_version fact.
- Updated validation for *_action lists to differentiate between
  auditd versions.
- Updated module to use new rake helper to auto-gen .spec file.

* Thu May 19 2016 nicholasmhughes <nicholasmhughes@gmail.com> - 5.0.1-0
- Change `btmp` and `wtmp` locations to `/var/log`
- Support dynamic audit log locations

* Thu Feb 18 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.0-4
- Added compliance function support

* Thu Dec 24 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-3
- Ensure that the ::auditd::add_rules define does not run if
  $::auditd::enable_auditing is false.

* Thu Nov 19 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-2
- Full migration to `simplib`, removed `common` and `functions`.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 5.0.0-1
- migration to simplib and simpcat (lib/ only)

* Tue Oct 20 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0