@@ -8,4 +8,8 @@
 # that just makes for more processing time.
 -a exit,never -F auid!=0 -F auid<<%= @uid_min %>
 <% end -%>
-
+<% if @ignore_crond -%>
+# Drop events related to cron jobs.  It creates a lot of logs that are not
+# usually useful
+-a never,user -F subj_type=crond_t
+<% end -%>
