@@ -1,5 +1,6 @@
 * Fri Dec 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
 - Updated global catalysts
+- Added a drop rule for crond events
 
 * Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
 - Update version to reflect SIMP6 dependencies
